working progress bar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-$base-color: #000000b6;
+$base-color: #160202e5;
 $blue-color: #22ac11;
 
 * {
@@ -39,14 +39,14 @@ h1 {
   .step {
     margin: 0.5rem 3rem;
     display: flex;
-    color: #ccc;
+    color: rgb(24, 1, 1);
 
     a {
       color: $base-color;
     }
 
     div:first-of-type {
-      border: 1px solid #ccc;
+      border: 1px solid rgb(14, 1, 1);
       padding: 5px;
       border-radius: 50%;
       margin-right: 0.5rem;
@@ -63,9 +63,9 @@ h1 {
 
     &.active {
       div:first-of-type {
-        background-color: $base-color;
-        border: 1px solid transparent;
-        color: #fff;
+        background-color: rgb(9, 35, 182);
+        color: rgb(255, 255, 255);
+        
       }
 
       div:last-of-type {
